# weather-mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/: config.py  server.py
src/clients/: open_meteo.py
src/tools/: weather.py
